target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'do'", "'while'", "'if'", "'for'", "'break'", 
                     "'continue'", "'return'", "<INVALID>", "<INVALID>", 
                     "'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'>'", 
                     "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'='", 
                     "'int'", "'float'", "'boolean'", "'string'", "'void'", 
                     "'else'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "COMMENT_LINE", "NOT", "MUL", "DIV", "MOD", 
                      "ADD", "SUB", "LRELA", "MRELA", "MERELA", "LERELA", 
                      "EQUAL", "NOTEQUAL", "AND", "OR", "ASSG", "INTTYPE", 
                      "FLOATTYPE", "BOOLEANTYPE", "STRINGTYPE", "VOIDTYPE", 
                      "ELSE", "INTLIT", "FLOATLIT", "BOOLEANLIT", "ID", 
                      "LB", "RB", "LP", "RP", "LS", "RS", "SEMI", "COMMA", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "STRINGLIT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manyDecl = 1
    RULE_decl = 2
    RULE_varDecl = 3
    RULE_typeList = 4
    RULE_idList = 5
    RULE_funcDecl = 6
    RULE_paramList = 7
    RULE_paramTemp = 8
    RULE_param = 9
    RULE_blockStmt = 10
    RULE_singStmt = 11
    RULE_doWhileStmt = 12
    RULE_ifStmt = 13
    RULE_forStmt = 14
    RULE_breakStmt = 15
    RULE_contiStmt = 16
    RULE_returnStmt = 17
    RULE_expression = 18
    RULE_expression_1 = 19
    RULE_expression_2 = 20
    RULE_expression_3 = 21
    RULE_expression_4 = 22
    RULE_expression_5 = 23
    RULE_expression_6 = 24
    RULE_expression_7 = 25
    RULE_expression_8 = 26
    RULE_expression_9 = 27
    RULE_expression_0 = 28
    RULE_primary = 29

    ruleNames =  [ "program", "manyDecl", "decl", "varDecl", "typeList", 
                   "idList", "funcDecl", "paramList", "paramTemp", "param", 
                   "blockStmt", "singStmt", "doWhileStmt", "ifStmt", "forStmt", 
                   "breakStmt", "contiStmt", "returnStmt", "expression", 
                   "expression_1", "expression_2", "expression_3", "expression_4", 
                   "expression_5", "expression_6", "expression_7", "expression_8", 
                   "expression_9", "expression_0", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    COMMENT=8
    COMMENT_LINE=9
    NOT=10
    MUL=11
    DIV=12
    MOD=13
    ADD=14
    SUB=15
    LRELA=16
    MRELA=17
    MERELA=18
    LERELA=19
    EQUAL=20
    NOTEQUAL=21
    AND=22
    OR=23
    ASSG=24
    INTTYPE=25
    FLOATTYPE=26
    BOOLEANTYPE=27
    STRINGTYPE=28
    VOIDTYPE=29
    ELSE=30
    INTLIT=31
    FLOATLIT=32
    BOOLEANLIT=33
    ID=34
    LB=35
    RB=36
    LP=37
    RP=38
    LS=39
    RS=40
    SEMI=41
    COMMA=42
    WS=43
    UNCLOSE_STRING=44
    ILLEGAL_ESCAPE=45
    STRINGLIT=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manyDecl(self):
            return self.getTypedRuleContext(MCParser.ManyDeclContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.manyDecl()
            self.state = 61
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManyDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def manyDecl(self):
            return self.getTypedRuleContext(MCParser.ManyDeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manyDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManyDecl" ):
                return visitor.visitManyDecl(self)
            else:
                return visitor.visitChildren(self)




    def manyDecl(self):

        localctx = MCParser.ManyDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manyDecl)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.decl()
                self.state = 65
                self.manyDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MCParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeList(self):
            return self.getTypedRuleContext(MCParser.TypeListContext,0)


        def idList(self):
            return self.getTypedRuleContext(MCParser.IdListContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.typeList()
            self.state = 74
            self.idList()
            self.state = 75
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_typeList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeList" ):
                return visitor.visitTypeList(self)
            else:
                return visitor.visitChildren(self)




    def typeList(self):

        localctx = MCParser.TypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def COMMA(self):
            return self.getToken(MCParser.COMMA, 0)

        def idList(self):
            return self.getTypedRuleContext(MCParser.IdListContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = MCParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idList)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(MCParser.ID)
                self.state = 80
                self.match(MCParser.COMMA)
                self.state = 81
                self.idList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(MCParser.ID)
                self.state = 83
                self.match(MCParser.LS)
                self.state = 84
                self.match(MCParser.INTLIT)
                self.state = 85
                self.match(MCParser.RS)
                self.state = 86
                self.match(MCParser.COMMA)
                self.state = 87
                self.idList()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(MCParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(MCParser.ID)
                self.state = 90
                self.match(MCParser.LS)
                self.state = 91
                self.match(MCParser.INTLIT)
                self.state = 92
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(MCParser.ParamListContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MCParser.BlockStmtContext,0)


        def typeList(self):
            return self.getTypedRuleContext(MCParser.TypeListContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcDecl)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MCParser.INTTYPE, MCParser.FLOATTYPE, MCParser.BOOLEANTYPE, MCParser.STRINGTYPE]:
                    self.state = 95
                    self.typeList()
                    pass
                elif token in [MCParser.VOIDTYPE]:
                    self.state = 96
                    self.match(MCParser.VOIDTYPE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 99
                self.match(MCParser.ID)
                self.state = 100
                self.match(MCParser.LB)
                self.state = 101
                self.paramList()
                self.state = 102
                self.match(MCParser.RB)
                self.state = 103
                self.blockStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.typeList()
                self.state = 106
                self.match(MCParser.LS)
                self.state = 107
                self.match(MCParser.RS)
                self.state = 108
                self.match(MCParser.ID)
                self.state = 109
                self.match(MCParser.LB)
                self.state = 110
                self.paramList()
                self.state = 111
                self.match(MCParser.RB)
                self.state = 112
                self.blockStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MCParser.ParamContext,0)


        def paramTemp(self):
            return self.getTypedRuleContext(MCParser.ParamTempContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 116
                self.param()
                self.state = 117
                self.paramTemp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamTempContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MCParser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(MCParser.ParamContext,0)


        def paramTemp(self):
            return self.getTypedRuleContext(MCParser.ParamTempContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paramTemp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamTemp" ):
                return visitor.visitParamTemp(self)
            else:
                return visitor.visitChildren(self)




    def paramTemp(self):

        localctx = MCParser.ParamTempContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramTemp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.COMMA:
                self.state = 121
                self.match(MCParser.COMMA)
                self.state = 122
                self.param()
                self.state = 123
                self.paramTemp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeList(self):
            return self.getTypedRuleContext(MCParser.TypeListContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.typeList()
            self.state = 128
            self.match(MCParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 129
                self.match(MCParser.LS)
                self.state = 130
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def singStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.SingStmtContext)
            else:
                return self.getTypedRuleContext(MCParser.SingStmtContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_blockStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)




    def blockStmt(self):

        localctx = MCParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MCParser.LP)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.T__0) | (1 << MCParser.T__2) | (1 << MCParser.T__3) | (1 << MCParser.T__4) | (1 << MCParser.T__5) | (1 << MCParser.T__6) | (1 << MCParser.NOT) | (1 << MCParser.SUB) | (1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.ID) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 134
                self.singStmt()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(MCParser.DoWhileStmtContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def ifStmt(self):
            return self.getTypedRuleContext(MCParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MCParser.ForStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(MCParser.BreakStmtContext,0)


        def contiStmt(self):
            return self.getTypedRuleContext(MCParser.ContiStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(MCParser.ReturnStmtContext,0)


        def expression(self):
            return self.getTypedRuleContext(MCParser.ExpressionContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(MCParser.BlockStmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_singStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingStmt" ):
                return visitor.visitSingStmt(self)
            else:
                return visitor.visitChildren(self)




    def singStmt(self):

        localctx = MCParser.SingStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_singStmt)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.FLOATTYPE, MCParser.BOOLEANTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.varDecl()
                pass
            elif token in [MCParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.doWhileStmt()
                self.state = 144
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.ifStmt()
                pass
            elif token in [MCParser.T__3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.forStmt()
                pass
            elif token in [MCParser.T__4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 148
                self.breakStmt()
                self.state = 149
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.T__5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.contiStmt()
                self.state = 152
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.T__6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 154
                self.returnStmt()
                self.state = 155
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.NOT, MCParser.SUB, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLEANLIT, MCParser.ID, MCParser.LB, MCParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 8)
                self.state = 157
                self.expression()
                self.state = 158
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 9)
                self.state = 160
                self.blockStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MCParser.ExpressionContext,0)


        def singStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.SingStmtContext)
            else:
                return self.getTypedRuleContext(MCParser.SingStmtContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_doWhileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStmt" ):
                return visitor.visitDoWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def doWhileStmt(self):
